# databot-agent

./: .env.example  .gitignore  pyproject.toml
databot_agent/: __init__.py  agent.py
databot_agent/agent_factory/: agent_builder.py  agent_store.py  auth_manager.py  factory_tools.py
databot_agent/agent_registry/: agents_registry.json  registry.py
databot_agent/bigquery_utils/: bigquery_tools.py
databot_agent/connectors/: __init__.py  base.py  rest_api.py  salesforce.py  snowflake.py
databot_agent/health_agent/: health_tools.py
databot_agent/resolution_agent/: resolution_tools.py
databot_agent/tableau_tools/: tableau_api.py
